Done Theme Settings

--- a/templates/components/custom/home/section-home-account.html
+++ b/templates/components/custom/home/section-home-account.html
@@ -2,27 +2,27 @@
     <div class="wrapper">
         <div class="homeAccount__cotent">
             <p class="homeAccount__subheading body-size-3 mt-0 mb-16 mb-10-mobile" data-aos="hero"" data-aos-order="1">
-                Become a Tish Lyon stockist
+                {{{lang 'home_account_section.subHeading'}}}
             </p>
 
             <h2 class="homeAccount__heading heading-size-7 mt-0 mb-16 mb-10-mobile" data-aos="hero"" data-aos-order="2">
-                Create a wholesale account
+                {{{lang 'home_account_section.heading'}}}
             </h2>
 
             <p class="homeAccount__desc body-size-3 font-body mb-16 mb-10-mobile" data-aos="hero"" data-aos-order="3">
-                Tish Lyon is the UK's most trusted wholesale solid gold body jewellery brand, offering luxury supplies to piercers and resellers. Apply for a wholesale account today to start your shopping journey.
+                {{{lang 'home_account_section.desc'}}}
             </p>
 
             <div class="homeAccount__buttons">
                 <a href="/login.php?action=create_account" class="button button--icon color-2">
-                    Create a wholesale account
+                    {{{lang 'home_account_section.create'}}}
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
                     </span>
                 </a>
 
                 <a href="/login.php" class="button button--icon color-2">
-                    Log In
+                    {{{lang 'home_account_section.login'}}}
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
                     </span>
