--- a/templates/components/custom/home/section-home-service.html
+++ b/templates/components/custom/home/section-home-service.html
@@ -7,10 +7,9 @@
                         <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-flare" viewBox="0 0 24 24"><path d="M11.456 2.665a.6.6 0 0 1 1.088 0l2.864 6.137a.6.6 0 0 0 .29.29l6.137 2.864a.6.6 0 0 1 0 1.088l-6.137 2.864a.6.6 0 0 0-.29.29l-2.864 6.137a.6.6 0 0 1-1.088 0l-2.864-6.137a.6.6 0 0 0-.29-.29l-6.137-2.864a.6.6 0 0 1 0-1.088l6.137-2.864a.6.6 0 0 0 .29-.29l2.864-6.137z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
                     </div>
                     <div class="item-content">
-                        <h4 class="item-heading heading-size-4">First class wholesale experience</h4>
+                        <h4 class="item-heading heading-size-4">{{{lang 'home_service.item_1_title'}}}</h4>
                         <p class="item-text body-size-3">
-                            Are you a piercing studio or jewellery reseller? Create your account 
-                            <a class="body-size-3 hover-link-2" href="https://www.tishlyon.com/pages/wholesale-sign-up-form" title="https://www.tishlyon.com/pages/wholesale-sign-up-form"><em>here.</em></a>
+                            {{{lang 'home_service.item_1_text'}}}
                         </p>
                     </div>
                 </div>
@@ -22,9 +21,9 @@
                         <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-truck" viewBox="0 0 24 24"><path d="M7 19a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm10 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4z" stroke="currentColor" stroke-miterlimit="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M14 17V6.6a.6.6 0 0 0-.6-.6H2.6a.6.6 0 0 0-.6.6v9.8a.6.6 0 0 0 .6.6h2.05M14 17H9.05M14 9h5.61a.6.6 0 0 1 .548.356l1.79 4.028a.6.6 0 0 1 .052.243V16.4a.6.6 0 0 1-.6.6h-1.9M14 17h1" stroke="currentColor" stroke-linecap="round"></path></svg>
                     </div>
                     <div class="item-content">
-                        <h4 class="item-heading heading-size-4">Free UK shipping</h4>
+                        <h4 class="item-heading heading-size-4">{{{lang 'home_service.item_2_title'}}}</h4>
                         <p class="item-text body-size-3">
-                            Enjoy free shipping on all orders over £100 + VAT
+                            {{{lang 'home_service.item_2_text'}}}
                         </p>
                     </div>
                 </div>
@@ -36,11 +35,9 @@
                     <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-box" viewBox="0 0 22 22"><g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><path d="M2 16.11V5.89a.6.6 0 0 1 .356-.548l8.4-3.734a.6.6 0 0 1 .488 0l8.4 3.734A.6.6 0 0 1 20 5.89v10.22a.6.6 0 0 1-.356.548l-8.4 3.734a.6.6 0 0 1-.488 0l-8.4-3.734A.6.6 0 0 1 2 16.11Z"></path><path d="M2.405 5.658C8.031 8.193 10.896 9.438 11 9.392 5.126 6.838 2.26 5.594 2.405 5.658ZM11 20.444c.104-7.321.104-11.005 0-11.05.144 7.302.144 10.986 0 11.05ZM19.848 5.658C14.053 8.194 11.104 9.439 11 9.393c6.043-2.554 8.992-3.8 8.848-3.735Z"></path><path d="m6.5 3.5 8.644 3.842a.6.6 0 0 1 .356.548v3.61"></path></g></svg>
                 </div>
                 <div class="item-content">
-                    <h4 class="item-heading heading-size-4">Global Reach</h4>
+                    <h4 class="item-heading heading-size-4">{{{lang 'home_service.item_3_title'}}}</h4>
                     <p class="item-text body-size-3">
-                        Add Tish Lyon to your business, no matter your location. Discover 
-                        <a class="body-size-3 hover-link-2" href="/pages/shipping-information" target="_blank" title="Shipping Information"><em>here</em></a>
-                        international shipping information.
+                        {{{lang 'home_service.item_3_text'}}}
                     </p>
                 </div>
             </div>
@@ -52,9 +49,11 @@
                     <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-star" viewBox="0 0 24 24"><path d="m8.587 8.236 2.598-5.232a.911.911 0 0 1 1.63 0l2.598 5.232 5.808.844a.902.902 0 0 1 .503 1.542l-4.202 4.07.992 5.75c.127.738-.653 1.3-1.32.952L12 18.678l-5.195 2.716c-.666.349-1.446-.214-1.319-.953l.992-5.75-4.202-4.07a.902.902 0 0 1 .503-1.54l5.808-.845z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
                 </div>
                 <div class="item-content">
-                    <h4 class="item-heading heading-size-4">Exceptional Quality</h4>
+                    <h4 class="item-heading heading-size-4">
+                        {{{lang 'home_service.item_4_title'}}}
+                    </h4>
                     <p class="item-text body-size-3">
-                        We believe every business deserves the best. Luxury piercing jewellery made accessible.
+                        {{{lang 'home_service.item_4_text'}}}
                     </p>
                 </div>
             </div>
