--- a/templates/pages/custom/page/about-us-layout.html
+++ b/templates/pages/custom/page/about-us-layout.html
@@ -15,9 +15,9 @@
             </h2>
             <div class="aboutUsIntro__text body-size-4 font-body aos-animate" data-aos="hero" data-aos-order="2">
                 <p>&nbsp;</p>
-                <p>Tish Lyon is the UK's most trusted wholesale gold body jewellery brand. As a dedicated team of solid gold jewellery experts, we dedicate ourselves to creating a seamless wholesale shopping experience for luxury piercing jewellery, designed with you in mind.</p>
-                <p>Since 2000, we have proudly built a collection of transcendent original designs. We strive to adapt with the everchanging world of piercing and develop innovative designs to meet the needs of piercers and jewellers worldwide. </p>
-                <p>Tish Lyon jewellery isn't just a luxury product. It is a lifestyle. In our mission to modernise the ear styling movement, we make it our focus to bring quality and comfort to every piece. With the luxury piercing experience being bigger than ever, we believe in creating jewellery that will shine bright every day and night without compromising on comfort.</p>
+                <p>{{{lang 'about_us_page.intro_text_1'}}}</p>
+                <p>{{{lang 'about_us_page.intro_text_2'}}}</p>
+                <p>{{{lang 'about_us_page.intro_text_3'}}}</p>
             </div>
         </div>
     </section>
