--- a/templates/components/custom/home/section-shop-the-look.html
+++ b/templates/components/custom/home/section-shop-the-look.html
@@ -3,47 +3,41 @@
         <div class="shopLook__image">
             <div class="shopLook__image-container">
                 <div class="shopLook__image-bg skeleton-loader">
-                    <img class="lazyload" src="" data-src="/product_images/uploaded_images/home-shop-the-look-banner.jpg" alt="Shop The Look Banner">
+                    <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.homeTheLookBanner}}" alt="{{theme_settings.homeTheLookText}} Banner">
                 </div>
 
                 <div class="look__dots hide-on-mobile">
-                    <button type="button" class="look__dot__button" style="--dot-top: 33%;
-                    --dot-left: 51%;" aria-label="Scroll to product" data-slider-thumb="10404">
+                    <button type="button" class="look__dot__button" style="--dot-top: {{theme_settings.homeTheLookItem1DotT}}; --dot-left: {{theme_settings.homeTheLookItem1DotL}};" aria-label="Scroll to product" data-slider-thumb="{{theme_settings.homeTheLookItem1ProId}}">
                       <span class="look__dot">
                         <span class="look__dot__icon"></span>
                       </span>
                     </button>
           
-                    <button type="button" class="look__dot__button" style="--dot-top: 47%;
-                    --dot-left: 75%;" aria-label="Scroll to product" data-slider-thumb="10380">
+                    <button type="button" class="look__dot__button" style="--dot-top: {{theme_settings.homeTheLookItem2DotT}}; --dot-left: {{theme_settings.homeTheLookItem2DotL}};" aria-label="Scroll to product" data-slider-thumb="{{theme_settings.homeTheLookItem2ProId}}">
                       <span class="look__dot">
                         <span class="look__dot__icon"></span>
                       </span>
                     </button>
           
-                    <button type="button" class="look__dot__button" style="--dot-top: 42%;
-                    --dot-left: 21%;" aria-label="Scroll to product" data-slider-thumb="10011">
+                    <button type="button" class="look__dot__button" style="--dot-top: {{theme_settings.homeTheLookItem3DotT}}; --dot-left: {{theme_settings.homeTheLookItem3DotL}};" aria-label="Scroll to product" data-slider-thumb="{{theme_settings.homeTheLookItem3ProId}}">
                       <span class="look__dot">
                         <span class="look__dot__icon"></span>
                       </span>
                     </button>
           
-                    <button type="button" class="look__dot__button" style="--dot-top: 66%;
-                    --dot-left: 52%;" aria-label="Scroll to product" data-slider-thumb="9802">
+                    <button type="button" class="look__dot__button" style="--dot-top: {{theme_settings.homeTheLookItem4DotT}}; --dot-left: {{theme_settings.homeTheLookItem4DotL}};" aria-label="Scroll to product" data-slider-thumb="{{theme_settings.homeTheLookItem4ProId}}">
                       <span class="look__dot">
                         <span class="look__dot__icon"></span>
                       </span>
                     </button>
           
-                    <button type="button" class="look__dot__button" style="--dot-top: 75%;
-                    --dot-left: 64%;" aria-label="Scroll to product" data-slider-thumb="10232">
+                    <button type="button" class="look__dot__button" style="--dot-top: {{theme_settings.homeTheLookItem5DotT}}; --dot-left: {{theme_settings.homeTheLookItem5DotL}};" aria-label="Scroll to product" data-slider-thumb="{{theme_settings.homeTheLookItem5ProId}}">
                       <span class="look__dot">
                         <span class="look__dot__icon"></span>
                       </span>
                     </button>
           
-                    <button type="button" class="look__dot__button" style="--dot-top: 86%;
-                    --dot-left: 73%;" aria-label="Scroll to product" data-slider-thumb="10294">
+                    <button type="button" class="look__dot__button" style="--dot-top: {{theme_settings.homeTheLookItem6DotT}}; --dot-left: {{theme_settings.homeTheLookItem6DotL}};" aria-label="Scroll to product" data-slider-thumb="{{theme_settings.homeTheLookItem6ProId}}">
                       <span class="look__dot">
                         <span class="look__dot__icon"></span>
                       </span>
@@ -63,9 +57,8 @@
         </div>
         <div class="shopLook__aside">
             <div class="shopLook__overlay hide-on-minMobile" data-popup-close=""></div>
-
-            <div class="productsByListId2 custom-block-product" data-list-id-2="10404,10380,10011,9802,10232,10294" id="product-by-list-id-2">
-                <p class="shopLook__title uppercase text-center">Shop the look</p>
+            <div class="productsByListId2 custom-block-product" data-list-id-2="{{theme_settings.homeTheLookProductList}}" id="product-by-list-id-2">
+                <p class="shopLook__title uppercase text-center">{{theme_settings.homeTheLookText}}</p>
 
                 <a href="#" class="shopLook__close hide-on-minMobile">
                     <span class="icon icon--close2">
@@ -76,7 +69,7 @@
                 <div class="custom_productLoading productSkeleton__list no-wrap"></div>
 
                 <div class="productGrid productGridCustom">
-                   
+                  
                 </div>
             </div>
         </div>
