--- a/templates/pages/custom/category/categoryCustom.html
+++ b/templates/pages/custom/category/categoryCustom.html
@@ -37,9 +37,11 @@ category:
     {{{category.description}}}
 {{/if}}
 
-<div class="category__title category__title--no-image">
-    <h1 class="hero__title h4">Products</h1>
-</div>
+{{{region name="csm_categroy_content_1"}}}
+{{{region name="csm_categroy_content_2"}}}
+{{{region name="csm_categroy_content_3"}}}
+{{{region name="csm_categroy_content_4"}}}
+{{{region name="csm_categroy_content_5"}}}
 
 <div class="productListingPage__wrapper">
     {{#if category.products}}
