Start Change Dropdown Source From Select To Ul-li

--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -434,6 +434,10 @@
         }
     }
 
+    input {
+        font-size: 14px;
+    }
+
     .button {
         margin-bottom: 0;
         padding-left: 0;
