--- a/templates/components/faceted-search/faceted-search-navigation.html
+++ b/templates/components/faceted-search/faceted-search-navigation.html
@@ -5,7 +5,7 @@
          aria-label="{{lang 'search.faceted.toggleSection' title=title}}"
     >
         <span class="accordion-title">
-            {{title}} <span>{{#if selected}} ({{items.length}}){{/if}}</span>
+            {{title}} <span class="filterTab__count">()</span>
         </span>
 
         <span>
