--- a/templates/components/faceted-search/index.html
+++ b/templates/components/faceted-search/index.html
@@ -35,13 +35,24 @@
         >
             <div class="accordion accordion--navList">
                 {{#each facets}}
-                    {{#if visible}}
-                        {{{dynamicComponent 'components/faceted-search/facets'}}}
-                    {{/if}}
+                    <div class="fadeInRight" data-step-animate="{{add @index 1}}">
+                        {{#if visible}}
+                            {{{dynamicComponent 'components/faceted-search/facets'}}}
+                        {{/if}}
+                    </div>
                 {{/each}}
             </div>
 
             <div class="blocker" style="display: none;"></div>
         </div>
     {{/any}}
+
+    <!-- * Reset Filter button -->
+    {{#gt selected.items.length 0}}
+        <div class="facetedSearch-resetFilters">
+            <a href="{{selected.remove_all_url}}" data-faceted-search-facet class="button button--secondary button--fullWidth">
+                {{lang 'search.faceted.reset-filters'}}
+            </a>
+        </div>
+    {{/gt}}
 </div>
