--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -48,7 +48,7 @@ blog:
 
     {{> components/custom/home/home-full-banner}}
 
-    {{> components/custom/home/home-feature-post post=blog.recent_posts }}
+    {{> components/custom/global/futured-blog-post-section }}
 
     {{> components/custom/home/home-section-instagram }}
 </div>
