--- a/assets/scss/components/stencil/facetedSearch/_facetedSearch.scss
+++ b/assets/scss/components/stencil/facetedSearch/_facetedSearch.scss
@@ -155,5 +155,47 @@
 .accordion-block {
     .accordion-content {
         display: block;
+
+        .toggleLink {
+            position: relative;
+            text-decoration: none;
+            font-weight: $fontWeight-thin;
+            padding-left: 30px;
+
+            .icon {
+                @include pos($pos: abs, $l: -3px, $cb: center-y);
+                @include square(24);
+            }
+        }
+    }
+}
+
+// * ------ Reset Filter Button ------
+.facetedSearch-resetFilters {
+    position: sticky;
+    left: 0;
+    right: 17px;
+    bottom: 0;
+    z-index: 2;
+    min-width: 271px;
+    padding: 5px 15px 15px;
+    margin-top: auto;
+    background: #ffffff;
+
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        right: 0;
+        height: 45px;
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0%) 0%, #ffffff 100%);
+        pointer-events: none;
+    }
+
+    > .button {
+        width: 100%;
+        margin-bottom: 0;
     }
 }
