--- a/templates/components/faceted-search/facets/range.html
+++ b/templates/components/faceted-search/facets/range.html
@@ -1,4 +1,4 @@
-<div class="accordion-block fadeInRight" data-step-animate="2">
+<div class="accordion-block">
     {{> components/faceted-search/faceted-search-navigation}}
 
     <div id="facetedSearch-content--{{dashcase facet}}" class="accordion-content{{#unless start_collapsed}} is-open{{/unless}}">
