--- a/templates/components/page/contact-us-form-return.html
+++ b/templates/components/page/contact-us-form-return.html
@@ -51,8 +51,8 @@
             <p class="strong">Optional:</p>
         </div>
         <fieldset class="custom-form__block custom-form__block--group">
-            <label class="custom-form__label label--block">Select an option</label>
-            <select class="contactFormSelect field" name="contact[i-would-like-to-choose]">
+            <label class="custom-form__label label--block csm-label-select-form">Select an option</label>
+            <select class="contactFormSelect field" name="csm_seclect">
                 <option value="I would like to choose">I would like to choose</option>
                 <option value="Replacement">Replacement</option>
                 <option value="Store Credit">Store Credit</option>
