--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -346,7 +346,7 @@
                                             </div>
                                         </div>
                                         <div class="findStore__text">
-                                            <p>Interested in this Tish Lyon piece? <a class="hover-link-2" href="/pages/store-locator" target="_blank" title="Store Locator">Discover a stockist</a> near you to purchase. </p>
+                                            <p>Interested in this Tish Lyon piece? <a class="hover-link-2" href="/store-locator" target="_blank" title="Store Locator">Discover a stockist</a> near you to purchase. </p>
                                         </div>
                                     </div>
                                 </div>
