--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -7,7 +7,7 @@
 //
 // =============================================================================
 body {
-    &:not(.page-type-default):not(.page-type-product):not(.page-type-cart):not(.page-type-blog):not(.page-type-blog_post):not(.page-title--about-us):not(.page-title--contact-us):not(.page-title--brand-hub) {
+    &:not(.page-type-default):not(.page-type-product):not(.page-type-cart):not(.page-type-blog):not(.page-type-blog_post):not(.page-title--about-us):not(.page-title--contact-us):not(.page-title--brand-hub):not(.page-title--faqs) {
         .page-heading {
             font-size: 44px;
             line-height: 53px;
