--- a/templates/components/page/contact-us-form-locator.html
+++ b/templates/components/page/contact-us-form-locator.html
@@ -58,8 +58,8 @@
             <p class="strong">Optional:</p>
         </div>
         <fieldset class="custom-form__block custom-form__block--group">
-            <label class="custom-form__label label--block">What type of business do you have?</label>
-            <select class="contactFormSelect field" name="contact[what-type-of-business-do-you-have]">
+            <label class="custom-form__label label--block csm-label-select-form">What type of business do you have?</label>
+            <select class="contactFormSelect field" name="csm_seclect">
                 <option value="- Pick an option -">- Pick an option -</option>
                 <option value="Studio">Studio</option>
                 <option value="Jewellers">Jewellers</option>
