--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -1,10 +1,10 @@
 {{#partial "page"}}
 
 {{#if (toLowerCase page.title) '==' 'contact us'}}
-<div class="contactUsTop">
-    <div class="contactUsTop__wrapper wrapper">
-        <div class="contactUsTop__content">
-            <h2 class="contactUsTop__title heading-size-8 aos-animate text-center mt-0 mb-16 mb-10-mobile" data-aos="hero" data-aos-order="2">
+<div class="pageBlockTop">
+    <div class="pageBlockTop__wrapper wrapper">
+        <div class="pageBlockTop__content">
+            <h2 class="pageBlockTop__title heading-size-8 aos-animate text-center mt-0 mb-16 mb-10-mobile" data-aos="hero" data-aos-order="2">
                 Get in Touch
             </h2>
         </div>
