--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -7,11 +7,13 @@
     {{{region name="csm_page_content_3"}}}
     {{{region name="csm_page_content_4"}}}
 
-    {{#unless (toLowerCase page.title) '==' 'brand hub'}}
+    {{#or (if (toLowerCase page.title) '==' 'brand hub') (if (toLowerCase page.title) '==' 'faqs') (if (toLowerCase page.title) '==' 'shipping information')}}
+
+    {{else}}
         {{#unless theme_settings.hide_page_heading }}
             <h1 class="page-heading">{{ page.title }}</h1>
         {{/unless}}
-    {{/unless}}
+    {{/or}}    
 
     {{{region name="csm_page_content_5"}}}
     {{{region name="csm_page_content_6"}}}
@@ -19,7 +21,7 @@
     {{{region name="csm_page_content_8"}}}
     {{{region name="csm_page_content_9"}}}
     {{{region name="csm_page_content_10"}}}
-
+    
     {{#if page.sub_pages}}
     <nav class="navBar navBar--sub">
         <ul class="navBar-section account-navigation">
